/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
}

repositories {
    mavenLocal()
    maven {
        url = 'http://repo.maven.apache.org/maven2'
    }
    mavenCentral()
}

dependencies {
    compile 'org.apache.commons:commons-collections4:4.1'
    compile 'org.scala-lang:scala-library:2.12.8'
    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    testCompile 'junit:junit:4.12'
    testCompile 'org.pegdown:pegdown:1.6.0'
}

group = 'com.expedia.www'
version = '1.0-SNAPSHOT'
sourceCompatibility = '1.8'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

test {
    jvmArgs '--enable-preview'
    testLogging {
        showStandardStreams = true
    }
}
jar {
    manifest {
        attributes "Main-Class": "gameoflife.app.GameOfLifeUI"
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

compileKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
